add star article api and model action
